fixed button img/text spacing

--- a/gbc-clean/sass/main.scss
+++ b/gbc-clean/sass/main.scss
@@ -40,7 +40,14 @@ BODY {
 .mt-button {
 	border: 1px solid $njm-button-border-color;
 	box-shadow: 1px 2px 3px 0 rgba(0, 0, 0, 0.14);
-	padding-right: 15px;
+}
+.gbc_ButtonWidget {
+	&.hasText .mt-button {
+		padding-right: 15px;
+	}
+}
+[__ButtonWidget].hasImage span[__ButtonWidget] {
+	margin-left: 0px;
 }
 .gbc_ButtonWidget.gbc_Focus > .mt-button {
 	background-color: $mt-button-primary-emphasis-background-color;
